@startuml

title __FACTORY's Class Diagram__\n

  package Factory {
    abstract class BouncerFactory {
        {abstract} + createCircle()
        {abstract} + createSquare()
    }
  }
  

  package Factory {
    class EmptyBouncerFactory {
        {static} - instance : EmptyBouncerFactory
        - EmptyBouncerFactory()
        {static} + getInstance()
        + createCircle()
        + createSquare()
    }
  }
  

  package Factory {
    class FilledBouncerFactory {
        {static} - instance : FilledBouncerFactory
        - FilledBouncerFactory()
        {static} + getInstance()
        + createCircle()
        + createSquare()
    }
  }
  

  EmptyBouncerFactory -up-|> BouncerFactory
  FilledBouncerFactory -up-|> BouncerFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
